[tool.pytest.ini_options]
markers = [
  "incremental: Mark tests as incremental",
  "kubevirt: Mark tests as kubevirt tests"
]
addopts = [
  "--pdbcls=IPython.terminal.debugger:TerminalPdb",
  "--cov-config=pyproject.toml",
  "--cov-report=html",
  "--cov-report=term",
  "--cov=ocp_scale_utilities.monitoring",
  "--cov=ocp_scale_utilities.threaded.scale",
  "--cov=ocp_scale_utilities.threaded.utils",
]

[tool.coverage.run]
omit = [
  "tests/*",
]

[tool.coverage.report]
fail_under = 45
skip_empty = true

[tool.coverage.html]
directory = ".tests_coverage"

[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

  [tool.ruff.format]
  exclude = [ ".git", ".venv", ".mypy_cache", ".tox", "__pycache__" ]

[tool.mypy]
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true

[tool.hatch.build.targets.wheel]
packages = [ "ocp_scale_utilities" ]

[tool.uv]
dev-dependencies = [ "ipdb>=0.13.13", "ipython>=8.12.3" ]

[project]
name = "openshift-python-scale-utilities"
requires-python = ">=3.12.0"
version = "0.1.1.2"
description = "OpenShift Python Scale Utilities"
readme = "README.md"
license = "Apache-2.0"
keywords = [ "Openshift", "Kubevirt", "Openshift Virtualization" ]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "pytest>=8.3.3",
  "timeout-sampler>=1.0.1",
  "openshift-python-wrapper~=11.0.10",
  "openshift-python-utilities>=6.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
