[tool.pytest.ini_options]
markers = [
  "incremental: Mark tests as incremental",
  "kubevirt: Mark tests as kubevirt tests"
]
addopts = [
  "--pdbcls=IPython.terminal.debugger:TerminalPdb",
  "--cov-config=pyproject.toml",
  "--cov-report=html",
  "--cov-report=term",
  "--cov=ocp_scale_utilities.logger",
  "--cov=ocp_scale_utilities.monitoring",
  "--cov=ocp_scale_utilities.threaded.scale",
  "--cov=ocp_scale_utilities.threaded.utils",
]

[tool.coverage.run]
omit = [
  "tests/*",
]

[tool.coverage.report]
fail_under = 90
skip_empty = true

[tool.coverage.html]
directory = ".tests_coverage"

[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

  [tool.ruff.format]
  exclude = [ ".git", ".venv", ".mypy_cache", ".tox", "__pycache__" ]

[tool.mypy]
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true

[tool.hatch.build.targets.wheel]
packages = [ "ocp_scale_utilities" ]

[tool.uv]
dev-dependencies = [ "ipdb>=0.13.13", "ipython>=8.12.3" ]

[project]
name = "openshift-python-scale-utilities"
requires-python = ">=3.12.0"
version = "0.1.1.3"
description = "OpenShift Python Scale Utilities"
readme = "README.md"
license = "Apache-2.0"
keywords = [ "Openshift", "Kubevirt", "Openshift Virtualization" ]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "openshift-python-wrapper~=11.0.10",
  "openshift-python-utilities>=6.0.0",
  "pytest>=8.3.3",
  "pytest-order>=1.3.0",
  "python-simple-logger~=2.0.9",
  "timeout-sampler>=1.0.1",
]

  [[project.authors]]
  name = "Sarah Bennert"
  email = "sarahbx@redhat.com"

  [[project.maintainers]]
  name = "Sarah Bennert"
  email = "sarahbx@redhat.com"

  [project.urls]
  homepage = "https://github.com/RedHatQE/openshift-python-scale-utilities"
  Download = "https://pypi.org/project/openshift-python-scale-utilities/"
  "Bug Tracker" = "https://github.com/RedHatQE/openshift-python-scale-utilities/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
